--- a/NetTools.nuspec
+++ b/NetTools.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>NetTools</id>
+        <id>N8.NetTools</id>
         <title>NetTools</title>
         <version>0.1.0</version>
         <authors>nwithan8</authors>
