- Drop .NET Framework support (still have .NET Standard support) - Split tools into separate base and submodules

--- a/NetTools.Crypto/NetTools.Crypto.csproj
+++ b/NetTools.Crypto/NetTools.Crypto.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>net5.0;net6.0;netcoreapp3.1;netstandard2.0;netstandard2.1</TargetFrameworks>
         <LangVersion>10</LangVersion>
-        <ImplicitUsings>disable</ImplicitUsings>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
         <RootNamespace>NetTools</RootNamespace>
@@ -52,6 +52,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     </ItemGroup>
-    
+
 </Project>
