--- a/NetTools.Attributes/NetTools.Attributes.csproj
+++ b/NetTools.Attributes/NetTools.Attributes.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>net5.0;net6.0;netcoreapp3.1;netstandard2.0;netstandard2.1</TargetFrameworks>
         <LangVersion>10</LangVersion>
-        <ImplicitUsings>disable</ImplicitUsings>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
         <RootNamespace>NetTools</RootNamespace>
@@ -53,5 +53,5 @@
 
     <ItemGroup>
     </ItemGroup>
-    
+
 </Project>
