--- a/NetTools.Localization/NetTools.Localization.csproj
+++ b/NetTools.Localization/NetTools.Localization.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>net5.0;net6.0;netcoreapp3.1;netstandard2.0;netstandard2.1</TargetFrameworks>
         <LangVersion>10</LangVersion>
-        <ImplicitUsings>disable</ImplicitUsings>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
         <RootNamespace>NetTools</RootNamespace>
@@ -52,6 +52,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="libphonenumber-csharp" Version="8.12.56" />
+        <PackageReference Include="Nager.Country" Version="3.1.1" />
+        <PackageReference Include="Nager.Country.Translation" Version="3.0.3" />
     </ItemGroup>
-    
+
 </Project>
