--- a/NetTools.nuspec
+++ b/NetTools.nuspec
@@ -7,7 +7,7 @@
         <authors>nwithan8</authors>
         <owners>nwithan8</owners>
         <projectUrl>https://github.com/nwithan8/NetTools</projectUrl>
-        <license type="expression">GPLv3</license>
+        <license type="expression">GPL-3.0-or-later</license>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A collection of general .NET utilities</description>
         <tags>tools utilities cryptography files JSON</tags>
@@ -87,6 +87,5 @@
         <file src="lib\net\net6.0\NetTools.dll" target="lib\net6.0" />
         <file src="lib\net\net6.0\NetTools.XML" target="lib\net6.0" />
         <file src="README.md" target="docs\" />
-        <file src="icon.png" target="images\" />
     </files>
 </package>
