--- a/Extensions/Files/NetTools.Files/NetTools.Files.csproj
+++ b/Extensions/Files/NetTools.Files/NetTools.Files.csproj
@@ -52,7 +52,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="N8.NetTools.Conversions" Version="0.1.1" />
+      <PackageReference Include="N8.NetTools.Crypto" Version="0.1.2" />
     </ItemGroup>
 
 </Project>
