- Explicitly indicate that Files needs Crypto (and, by extension, NetTools). Nuget versioning ranges should handle any potential conflicts

--- a/Extensions/Files/NetTools.Files/NetTools.Files.csproj
+++ b/Extensions/Files/NetTools.Files/NetTools.Files.csproj
@@ -52,7 +52,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="N8.NetTools.Crypto" Version="0.1.2" />
+        <PackageReference Include="N8.NetTools" Version="0.3.0"/>
+        <PackageReference Include="N8.NetTools.Crypto" Version="0.1.2"/>
     </ItemGroup>
 
 </Project>
