--- a/Extensions/Files/NetTools.Files/NetTools.Files.nuspec
+++ b/Extensions/Files/NetTools.Files/NetTools.Files.nuspec
@@ -15,18 +15,23 @@
         <releaseNotes>See Release Notes at https://github.com/nwithan8/NetTools/releases</releaseNotes>
         <dependencies>
             <group targetFramework="netstandard2.0">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)"/>
                 <dependency id="N8.NetTools.Crypto" version="[0.1.2, 1.0.0)"/>
             </group>
             <group targetFramework="netstandard2.1">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)"/>
                 <dependency id="N8.NetTools.Crypto" version="[0.1.2, 1.0.0)"/>
             </group>
             <group targetFramework="netcoreapp3.1">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)"/>
                 <dependency id="N8.NetTools.Crypto" version="[0.1.2, 1.0.0)"/>
             </group>
             <group targetFramework="net5.0">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)"/>
                 <dependency id="N8.NetTools.Crypto" version="[0.1.2, 1.0.0)"/>
             </group>
             <group targetFramework="net6.0">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)"/>
                 <dependency id="N8.NetTools.Crypto" version="[0.1.1, 1.0.0)"/>
             </group>
         </dependencies>
