--- a/Extensions/Crypto/NetTools.Crypto/NetTools.Crypto.nuspec
+++ b/Extensions/Crypto/NetTools.Crypto/NetTools.Crypto.nuspec
@@ -14,33 +14,24 @@
         <tags>cryptography encryption hashing md5 sha1 sha256 hmac</tags>
         <releaseNotes>See Release Notes at https://github.com/nwithan8/NetTools/releases</releaseNotes>
         <dependencies>
-            <group targetFramework="netstandard2.0">
-                <dependency id="BCrypt.Net-Next" version="[4.0.3, 5.0.0)" />
-                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
-            </group>
-            <group targetFramework="netstandard2.1">
-                <dependency id="BCrypt.Net-Next" version="[4.0.3, 5.0.0)" />
-                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
-            </group>
             <group targetFramework="netcoreapp3.1">
                 <dependency id="BCrypt.Net-Next" version="[4.0.3, 5.0.0)" />
                 <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
+                <dependency id="CrypticWizard.RandomWordGenerator" version="0.9.5" />
             </group>
             <group targetFramework="net5.0">
                 <dependency id="BCrypt.Net-Next" version="[4.0.3, 5.0.0)" />
                 <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
+                <dependency id="CrypticWizard.RandomWordGenerator" version="0.9.5" />
             </group>
             <group targetFramework="net6.0">
                 <dependency id="BCrypt.Net-Next" version="[4.0.3, 5.0.0)" />
                 <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
+                <dependency id="CrypticWizard.RandomWordGenerator" version="0.9.5" />
             </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="..\lib\net\netstandard2.0\NetTools.Crypto.dll" target="lib\netstandard2.0" />
-        <file src="..\lib\net\netstandard2.0\NetTools.Crypto.XML" target="lib\netstandard2.0" />
-        <file src="..\lib\net\netstandard2.1\NetTools.Crypto.dll" target="lib\netstandard2.1" />
-        <file src="..\lib\net\netstandard2.1\NetTools.Crypto.XML" target="lib\netstandard2.1" />
         <file src="..\lib\net\netcoreapp3.1\NetTools.Crypto.dll" target="lib\netcoreapp3.1" />
         <file src="..\lib\net\netcoreapp3.1\NetTools.Crypto.XML" target="lib\netcoreapp3.1" />
         <file src="..\lib\net\net5.0\NetTools.Crypto.dll" target="lib\net5.0" />
