--- a/Extensions/Conversions/NetTools.Conversions.Test/NetTools.Conversions.Test.csproj
+++ b/Extensions/Conversions/NetTools.Conversions.Test/NetTools.Conversions.Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net5.0;net6.0;netcoreapp3.1;net462;net48</TargetFrameworks>
+        <TargetFrameworks>net5.0;net6.0;netcoreapp3.1;net462;net48;net7.0</TargetFrameworks>
         <LangVersion>10</LangVersion>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
