--- a/Extensions/Conversions/NetTools.Conversions/NetTools.Conversions.nuspec
+++ b/Extensions/Conversions/NetTools.Conversions/NetTools.Conversions.nuspec
@@ -29,6 +29,9 @@
             <group targetFramework="net6.0">
                 <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
             </group>
+            <group targetFramework="net7.0">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
+            </group>
         </dependencies>
     </metadata>
     <files>
@@ -42,6 +45,8 @@
         <file src="..\lib\net\net5.0\NetTools.Conversions.XML" target="lib\net5.0" />
         <file src="..\lib\net\net6.0\NetTools.Conversions.dll" target="lib\net6.0" />
         <file src="..\lib\net\net6.0\NetTools.Conversions.XML" target="lib\net6.0" />
+        <file src="..\lib\net\net7.0\NetTools.Conversions.dll" target="lib\net7.0" />
+        <file src="..\lib\net\net7.0\NetTools.Conversions.XML" target="lib\net7.0" />
         <file src="..\README.md" target="docs\" />
     </files>
 </package>
