--- a/Extensions/Crypto/NetTools.Crypto/NetTools.Crypto.nuspec
+++ b/Extensions/Crypto/NetTools.Crypto/NetTools.Crypto.nuspec
@@ -29,6 +29,11 @@
                 <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
                 <dependency id="CrypticWizard.RandomWordGenerator" version="0.9.5" />
             </group>
+            <group targetFramework="net7.0">
+                <dependency id="BCrypt.Net-Next" version="[4.0.3, 5.0.0)" />
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
+                <dependency id="CrypticWizard.RandomWordGenerator" version="0.9.5" />
+            </group>
         </dependencies>
     </metadata>
     <files>
@@ -38,6 +43,8 @@
         <file src="..\lib\net\net5.0\NetTools.Crypto.XML" target="lib\net5.0" />
         <file src="..\lib\net\net6.0\NetTools.Crypto.dll" target="lib\net6.0" />
         <file src="..\lib\net\net6.0\NetTools.Crypto.XML" target="lib\net6.0" />
+        <file src="..\lib\net\net7.0\NetTools.Crypto.dll" target="lib\net7.0" />
+        <file src="..\lib\net\net7.0\NetTools.Crypto.XML" target="lib\net7.0" />
         <file src="..\README.md" target="docs\" />
     </files>
 </package>
