--- a/Extensions/Files/NetTools.Files/NetTools.Files.nuspec
+++ b/Extensions/Files/NetTools.Files/NetTools.Files.nuspec
@@ -34,6 +34,10 @@
                 <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)"/>
                 <dependency id="N8.NetTools.Crypto" version="[0.1.1, 1.0.0)"/>
             </group>
+            <group targetFramework="net7.0">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)"/>
+                <dependency id="N8.NetTools.Crypto" version="[0.1.1, 1.0.0)"/>
+            </group>
         </dependencies>
     </metadata>
     <files>
@@ -47,6 +51,8 @@
         <file src="..\lib\net\net5.0\NetTools.Files.XML" target="lib\net5.0"/>
         <file src="..\lib\net\net6.0\NetTools.Files.dll" target="lib\net6.0"/>
         <file src="..\lib\net\net6.0\NetTools.Files.XML" target="lib\net6.0"/>
+        <file src="..\lib\net\net7.0\NetTools.Files.dll" target="lib\net7.0"/>
+        <file src="..\lib\net\net7.0\NetTools.Files.XML" target="lib\net7.0"/>
         <file src="..\README.md" target="docs\"/>
     </files>
 </package>
