--- a/Extensions/HTTP/NetTools.HTTP/NetTools.HTTP.nuspec
+++ b/Extensions/HTTP/NetTools.HTTP/NetTools.HTTP.nuspec
@@ -39,6 +39,11 @@
                 <dependency id="Newtonsoft.Json" version="[13.0.1, 14.0.0)" />
                 <dependency id="RestSharp" version="[108.0.2, 109.0.0)" />
             </group>
+            <group targetFramework="net7.0">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
+                <dependency id="Newtonsoft.Json" version="[13.0.1, 14.0.0)" />
+                <dependency id="RestSharp" version="[108.0.2, 109.0.0)" />
+            </group>
         </dependencies>
     </metadata>
     <files>
@@ -52,6 +57,8 @@
         <file src="..\lib\net\net5.0\NetTools.HTTP.XML" target="lib\net5.0" />
         <file src="..\lib\net\net6.0\NetTools.HTTP.dll" target="lib\net6.0" />
         <file src="..\lib\net\net6.0\NetTools.HTTP.XML" target="lib\net6.0" />
+        <file src="..\lib\net\net7.0\NetTools.HTTP.dll" target="lib\net7.0" />
+        <file src="..\lib\net\net7.0\NetTools.HTTP.XML" target="lib\net7.0" />
         <file src="..\README.md" target="docs\" />
     </files>
 </package>
