--- a/Extensions/Localization/NetTools.Localization/NetTools.Localization.nuspec
+++ b/Extensions/Localization/NetTools.Localization/NetTools.Localization.nuspec
@@ -44,6 +44,12 @@
                 <dependency id="Nager.Country" version="[3.1.1, 4.0.0)" />
                 <dependency id="Nager.Country.Translation" version="[3.0.3, 4.0.0)" />
             </group>
+            <group targetFramework="net7.0">
+                <dependency id="N8.NetTools" version="[0.3.0, 1.0.0)" />
+                <dependency id="libphonenumber-csharp" version="[8.12.56, 9.0.0)" />
+                <dependency id="Nager.Country" version="[3.1.1, 4.0.0)" />
+                <dependency id="Nager.Country.Translation" version="[3.0.3, 4.0.0)" />
+            </group>
         </dependencies>
     </metadata>
     <files>
@@ -57,6 +63,8 @@
         <file src="..\lib\net\net5.0\NetTools.Localization.XML" target="lib\net5.0" />
         <file src="..\lib\net\net6.0\NetTools.Localization.dll" target="lib\net6.0" />
         <file src="..\lib\net\net6.0\NetTools.Localization.XML" target="lib\net6.0" />
+        <file src="..\lib\net\net7.0\NetTools.Localization.dll" target="lib\net7.0" />
+        <file src="..\lib\net\net7.0\NetTools.Localization.XML" target="lib\net7.0" />
         <file src="..\README.md" target="docs\" />
     </files>
 </package>
