--- a/NetTools/NetTools.nuspec
+++ b/NetTools/NetTools.nuspec
@@ -23,6 +23,8 @@
             </group>
             <group targetFramework="net6.0">
             </group>
+            <group targetFramework="net7.0">
+            </group>
         </dependencies>
     </metadata>
     <files>
@@ -36,6 +38,8 @@
         <file src="..\lib\net\net5.0\NetTools.XML" target="lib\net5.0" />
         <file src="..\lib\net\net6.0\NetTools.dll" target="lib\net6.0" />
         <file src="..\lib\net\net6.0\NetTools.XML" target="lib\net6.0" />
+        <file src="..\lib\net\net7.0\NetTools.dll" target="lib\net7.0" />
+        <file src="..\lib\net\net7.0\NetTools.XML" target="lib\net7.0" />
         <file src="..\README.md" target="docs\" />
     </files>
 </package>
