--- a/Common/Conversions/NetTools.Common.Conversions/NetTools.Common.Conversions.csproj
+++ b/Common/Conversions/NetTools.Common.Conversions/NetTools.Common.Conversions.csproj
@@ -9,7 +9,7 @@
         <RootNamespace>NetTools.Common.Conversions</RootNamespace>
         <Configurations>Release;Debug</Configurations>
         <Platforms>AnyCPU</Platforms>
-        <PackageId>NetTools.Common.Conversions</PackageId>
+        <PackageId>N8.NetTools.Common.Conversions</PackageId>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <Authors>nwithan8</Authors>
         <PackageProjectUrl>https://github.com/nwithan8/NetTools</PackageProjectUrl>
@@ -55,7 +55,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="../readme.md" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath=""/>
         <PackageReference Include="N8.NetTools" Version="0.3.0" />
     </ItemGroup>
 
