--- a/Crypto/NetTools.Crypto/NetTools.Crypto.csproj
+++ b/Crypto/NetTools.Crypto/NetTools.Crypto.csproj
@@ -9,7 +9,7 @@
         <RootNamespace>NetTools.Crypto</RootNamespace>
         <Configurations>Release;Debug</Configurations>
         <Platforms>AnyCPU</Platforms>
-        <PackageId>NetTools.Crypto</PackageId>
+        <PackageId>N8.NetTools.Crypto</PackageId>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <Authors>nwithan8</Authors>
         <PackageProjectUrl>https://github.com/nwithan8/NetTools</PackageProjectUrl>
@@ -55,14 +55,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="../readme.md" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath=""/>
         <PackageReference Include="N8.NetTools" Version="0.4.0" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="CrypticWizard.RandomWordGenerator" Version="0.9.5" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="../readme.md" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath=""/>
     </ItemGroup>
 
 </Project>
