--- a/HTTP/NetTools.HTTP/NetTools.HTTP.csproj
+++ b/HTTP/NetTools.HTTP/NetTools.HTTP.csproj
@@ -9,7 +9,7 @@
         <RootNamespace>NetTools.HTTP</RootNamespace>
         <Configurations>Release;Debug</Configurations>
         <Platforms>AnyCPU</Platforms>
-        <PackageId>NetTools.HTTP</PackageId>
+        <PackageId>N8.NetTools.HTTP</PackageId>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <Authors>nwithan8</Authors>
         <PackageProjectUrl>https://github.com/nwithan8/NetTools</PackageProjectUrl>
@@ -55,7 +55,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="../readme.md" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath=""/>
         <PackageReference Include="N8.NetTools" Version="0.3.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="RestSharp" Version="108.0.2" />
