- More file rearrangements

--- a/Crypto/NetTools.Crypto/NetTools.Crypto.csproj
+++ b/Crypto/NetTools.Crypto/NetTools.Crypto.csproj
@@ -55,14 +55,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="../README.md" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath="" />
         <PackageReference Include="N8.NetTools" Version="0.4.0" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="CrypticWizard.RandomWordGenerator" Version="0.9.5" />
+        <PackageReference Include="N8.NetTools.Common" Version="0.6.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="../README.md" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath="" />
     </ItemGroup>
 
 </Project>
