--- a/HTTP/NetTools.HTTP/NetTools.HTTP.csproj
+++ b/HTTP/NetTools.HTTP/NetTools.HTTP.csproj
@@ -55,8 +55,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="../README.md" Pack="true" PackagePath=""/>
+        <None Include="../README.md" Pack="true" PackagePath="" />
         <PackageReference Include="N8.NetTools" Version="0.3.0" />
+        <PackageReference Include="N8.NetTools.Common" Version="0.6.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="RestSharp" Version="108.0.2" />
     </ItemGroup>
