- Prep for new round of releases

--- a/Common.Files/NetTools.Common.Files/NetTools.Common.Files.csproj
+++ b/Common.Files/NetTools.Common.Files/NetTools.Common.Files.csproj
@@ -56,8 +56,12 @@
 
     <ItemGroup>
         <None Include="../README.md" Pack="true" PackagePath="" />
-        <PackageReference Include="N8.NetTools" Version="0.3.0" />
         <PackageReference Include="N8.NetTools.Common" Version="0.6.0" />
+        <PackageReference Include="N8.NetTools.Common.Conversions" Version="1.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Common.Conversions\NetTools.Common.Conversions\NetTools.Common.Conversions.csproj" />
     </ItemGroup>
 
 </Project>
