--- a/Crypto/NetTools.Crypto/NetTools.Crypto.csproj
+++ b/Crypto/NetTools.Crypto/NetTools.Crypto.csproj
@@ -58,14 +58,11 @@
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="CrypticWizard.RandomWordGenerator" Version="0.9.5" />
         <PackageReference Include="N8.NetTools.Common" Version="0.6.0" />
+        <PackageReference Include="N8.NetTools.Common.Conversions" Version="1.0.1" />
     </ItemGroup>
 
     <ItemGroup>
         <None Include="../README.md" Pack="true" PackagePath="" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\..\Common.Conversions\NetTools.Common.Conversions\NetTools.Common.Conversions.csproj" />
     </ItemGroup>
 
 </Project>
