--- a/JSON/NetTools.JSON/NetTools.JSON.csproj
+++ b/JSON/NetTools.JSON/NetTools.JSON.csproj
@@ -6,15 +6,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
-        <RootNamespace>NetTools.HTTP</RootNamespace>
+        <RootNamespace>NetTools.JSON</RootNamespace>
         <Configurations>Release;Debug</Configurations>
         <Platforms>AnyCPU</Platforms>
-        <PackageId>N8.NetTools.HTTP</PackageId>
+        <PackageId>N8.NetTools.JSON</PackageId>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <Authors>nwithan8</Authors>
         <PackageProjectUrl>https://github.com/nwithan8/NetTools</PackageProjectUrl>
         <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
-        <PackageTags>HTTP status request response</PackageTags>
+        <PackageTags>JSON serialization deserialization</PackageTags>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -57,7 +57,7 @@
     <ItemGroup>
         <None Include="../README.md" Pack="true" PackagePath="" />
         <PackageReference Include="N8.NetTools.Common" Version="0.6.0" />
-        <PackageReference Include="N8.NetTools.Polly" Version="0.1.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
 </Project>
