- Add new dictionary, object extension methods to NetTools.Common - Fix property, method retrieval for NetTools.Common.Attributes - Add new NetTools.Testing project, TestType attribute

--- a/Common/NetTools.Common.Test/NetTools.Common.Core.Test.csproj
+++ b/Common/NetTools.Common.Test/NetTools.Common.Core.Test.csproj
@@ -52,6 +52,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common.RegEx\NetTools.Common.RegEx\NetTools.Common.RegEx.csproj" />
+      <ProjectReference Include="..\NetTools.Common\NetTools.Common.csproj" />
       <ProjectReference Include="..\NetTools\NetTools.csproj" />
     </ItemGroup>
 
