- Bump dependency for RegEx

--- a/Common.RegEx/NetTools.Common.RegEx/NetTools.Common.RegEx.csproj
+++ b/Common.RegEx/NetTools.Common.RegEx/NetTools.Common.RegEx.csproj
@@ -14,7 +14,7 @@
         <Authors>nwithan8</Authors>
         <PackageProjectUrl>https://github.com/nwithan8/NetTools</PackageProjectUrl>
         <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
-        <PackageTags>RestSharp</PackageTags>
+        <PackageTags>ReGex regular expressions</PackageTags>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -56,7 +56,7 @@
 
     <ItemGroup>
         <None Include="../README.md" Pack="true" PackagePath="" />
-        <PackageReference Include="N8.NetTools.Common" Version="0.6.0" />
+        <PackageReference Include="N8.NetTools.Common" Version="0.6.2" />
         <PackageReference Include="N8.NetTools.HTTP" Version="0.6.0" />
         <PackageReference Include="N8.NetTools.JSON" Version="0.1.0" />
         <PackageReference Include="RestSharp" Version="108.0.4" />
