--- a/RestAPIClient/NetTools.RestAPIClient/NetTools.RestAPIClient.csproj
+++ b/RestAPIClient/NetTools.RestAPIClient/NetTools.RestAPIClient.csproj
@@ -63,7 +63,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Utilities\" />
+        <None Include="../README.md" Pack="true" PackagePath="" />
     </ItemGroup>
     
 
